avoid upload table overflow

--- a/doc/doc.scss
+++ b/doc/doc.scss
@@ -104,6 +104,7 @@
   }
 
   key {
+    background-color: $white;
     border: 1px solid $gray-c;
     border-radius: 4px;
     box-shadow: 0 1px 0 $gray-c;
