--- a/src/dialog/dialog.scss
+++ b/src/dialog/dialog.scss
@@ -47,10 +47,6 @@
     margin-left: 5px;
   }
 
-  .dataTables_wrapper td {
-    padding: 5px 10px;
-  }
-
   .nav {
     a {
       color: $black;
